Cleanup before publishing to galaxy

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,11 +1,24 @@
 ---
-firewall_incoming_tcp_ports:
-  - "22"
-  - "6934"
-firewall_incoming_udp_ports:
-  - "53"
+firewall_incoming_tcp_ports: []
+
+# Example
+# firewall_incoming_tcp_ports:
+#  - "22"
+#  - "6934"
+
+firewall_incoming_udp_ports: []
+
+# Example
+# firewall_incoming_udp_ports:
+#  - "53"
+
 firewall_outgoing_tcp_ports: []
+
 firewall_outgoing_udp_ports: []
-firewall_rich_rules:
-  - {"family": "ipv4", "source_address": "41.208.72.148/32", "dest_port": "161", "protocol": "udp"}
-  - {"family": "ipv4", "source_address": "41.208.72.148/32", "dest_port": "5666", "protocol": "tcp"}
+
+firewall_rich_rules: []
+
+# Example
+# firewall_rich_rules:
+#  - {"family": "ipv4", "source_address": "41.208.72.148/32", "dest_port": "161", "protocol": "udp"}
+#  - {"family": "ipv4", "source_address": "41.208.72.148/32", "dest_port": "5666", "protocol": "tcp"}
