--- a/tasks/ufw/main.yml
+++ b/tasks/ufw/main.yml
@@ -52,7 +52,15 @@
 - name: Fail if its not safe to activate UFW
   fail:
     msg: "It's not safe to activate UFW while SSH is using a custom port "
-  when: ufw_status.stdout != "inactive" and ssh_port.stdout != '22'
+  when: ufw_status.stdout == "inactive" and ssh_port.stdout != '22'
+
+- name: Add UFW Incoming SSH Rule
+  ufw:
+    rule: allow
+    to_port: "22"
+    proto: tcp
+    direction: in
+  when: ssh_port.stdout == '22'
 
 - name: Activate and enable UFW on boot
   ufw:
