--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,34 +1,35 @@
 galaxy_info:
+  role_name: firewall_ansible_role
   author: Ahmed Shibani
   description: Ansible role to configure firewall based on OS
   company: Libyan Spider
 
   license: BSD
 
-  min_ansible_version: 2.9
+  min_ansible_version: "2.9"
 
   platforms:
-  - name: EL
-    versions:
-    - 7
-    - 8
-  - name: Debian
-    versions:
-    - bullseye
-    - buster
-    - etch
-    - jessie
-  - name: Ubuntu
-    versions:
-    - all
-  - name: Windows
-    versions:
-    - all
+    - name: EL
+      versions:
+        - "7"
+        - "8"
+    - name: Debian
+      versions:
+        - bullseye
+        - buster
+        - etch
+        - jessie
+    - name: Ubuntu
+      versions:
+        - all
+    - name: Windows
+      versions:
+        - all
 
   galaxy_tags:
     - firewalld
     - ufw
     - csf
-    - windows_firewall
+    - windowsfirewall
 
 dependencies: []
