--- a/tasks/ufw/main.yml
+++ b/tasks/ufw/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install UFW Package
-  apt:
+  ansible.builtin.apt:
     name: ufw
     state: present
 
@@ -30,27 +30,27 @@
   loop: "{{ firewall_rich_rules }}"
 
 - name: Check if UFW Status
-  shell: ufw status | grep Status | cut -d' ' -f 2
+  ansible.builtin.shell: ufw status | grep Status | cut -d' ' -f 2
   changed_when: false
   ignore_errors: true
   register: ufw_status
 
 - name: UFW Status
-  debug:
+  ansible.builtin.debug:
     var: ufw_status.stdout
 
 - name: Find SSH current listening port
-  shell: ss -tulpn | grep sshd | awk '{print $5}' | cut -d ':' -f2 | head -n 1
+  ansible.builtin.shell: ss -tulpn | grep sshd | awk '{print $5}' | cut -d ':' -f2 | head -n 1
   ignore_errors: true
   changed_when: false
   register: ssh_port
 
 - name: SSH Current listening port
-  debug:
+  ansible.builtin.debug:
     var: ssh_port.stdout
 
 - name: Fail if its not safe to activate UFW
-  fail:
+  ansible.builtin.fail:
     msg: "It's not safe to activate UFW while SSH is using a custom port "
   when: ufw_status.stdout == "inactive" and ssh_port.stdout != '22'
 
