--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,7 +22,7 @@
   ansible.builtin.stat:
     path: /usr/bin/firewall-cmd
   register: firewalld_installed
-  when: ansible_os_family == 'RedHat'
+  when: ansible_os_family == 'RedHat' or ansible_os_family == 'Rocky' 
 
 - name: Fail if FirewallD is not installed and playbook var install_firewall_package is not set
   ansible.builtin.fail:
@@ -37,7 +37,7 @@
 
 - name: Include Firewalld Tasks
   include_tasks: firewalld/main.yml
-  when: ansible_os_family == 'RedHat' and csf_installed is defined and csf_installed.stat.exists == false
+  when: (ansible_os_family == 'RedHat' or ansible_os_family == 'Rocky') and csf_installed is defined and csf_installed.stat.exists == false
 
 - name: Check if UFW is installed
   ansible.builtin.stat:
